src/test/ui/feature-gate/issue-43106-gating-of-rustc_deprecated.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:7:1
   |
LL | #![rustc_deprecated           = "1500"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:10:1
   |
LL | #[rustc_deprecated = "1500"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:13:17
   |
LL |     mod inner { #![rustc_deprecated="1500"] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:16:5
   |
LL |     #[rustc_deprecated = "1500"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:19:5
   |
LL |     #[rustc_deprecated = "1500"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:22:5
   |
LL |     #[rustc_deprecated = "1500"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:25:5
   |
LL |     #[rustc_deprecated = "1500"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

